tests/errors/named_on_builtin_method.vt
fn main() { print("x".slice(lo: 0, hi: 1)); }
